--- a/ModLoaderGC.csproj
+++ b/ModLoaderGC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -8,12 +8,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Reference Include="ImGui.NET">
-        <HintPath>..\ImGui.NET\bin\Release\ImGui.NET\net6.0\ImGui.NET.dll</HintPath>
-      </Reference>
+	<Reference Include="ImGui.NET">
+		<HintPath>..\ImGui.NET\bin\Release\ImGui.NET\net6.0\ImGui.NET.dll</HintPath>
+	</Reference>
       <Reference Include="ModLoader.API">
         <HintPath>..\..\..\ModLoader\ModLoader.API\bin\Debug\net7.0\ModLoader.API.dll</HintPath>
       </Reference>
     </ItemGroup>
 
+	<ItemGroup>
+		<Using Include="System.Byte" Alias="u8" />
+		<Using Include="System.UInt16" Alias="u16" />
+		<Using Include="System.UInt32" Alias="u32" />
+		<Using Include="System.UInt64" Alias="u64" />
+		<Using Include="System.SByte" Alias="s8" />
+		<Using Include="System.Int16" Alias="s16" />
+		<Using Include="System.Int32" Alias="s32" />
+		<Using Include="System.Int64" Alias="s64" />
+		<Using Include="System.Half" Alias="f16" />
+		<Using Include="System.Single" Alias="f32" />
+		<Using Include="System.Double" Alias="f64" />
+		<Using Include="System.IntPtr" Alias="Ptr" />
+	</ItemGroup>
+	
 </Project>
