--- a/ModLoaderGC.csproj
+++ b/ModLoaderGC.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-	<Reference Include="ImGui.NET">
-		<HintPath>..\ImGui.NET\bin\Release\ImGui.NET\net6.0\ImGui.NET.dll</HintPath>
-	</Reference>
+      <Reference Include="ImGui.NET">
+        <HintPath>..\ImGui.NET\bin\Release\ImGui.NET\netstandard2.0\ImGui.NET.dll</HintPath>
+      </Reference>
       <Reference Include="ModLoader.API">
         <HintPath>..\..\..\ModLoader\ModLoader.API\bin\Debug\net7.0\ModLoader.API.dll</HintPath>
       </Reference>
@@ -29,6 +29,12 @@
 		<Using Include="System.Single" Alias="f32" />
 		<Using Include="System.Double" Alias="f64" />
 		<Using Include="System.IntPtr" Alias="Ptr" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Roboto-Regular.ttf">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 	
 </Project>
